# vllm-marconi-offload

./: .gitignore  LICENSE  PUBLISHING.md  README.md  pyproject.toml
examples/: client.py  serve_example.sh
tests/: test_against_stock_vllm.py  test_patches.py
vllm_marconi_offload/: __init__.py  _patches.py  connector.py  copy_backend.py  manager.py  metadata.py  worker.py
