[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vllm-marconi-offload"
version = "0.2.0"
description = "Two-tier (RAM + SSD) KV cache offload connector for vLLM with Marconi-style reuse-aware eviction."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [
    { name = "vllm-marconi-offload contributors" },
]
keywords = [
    "vllm",
    "kv-cache",
    "prefix-cache",
    "offload",
    "marconi",
    "llm-inference",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# We do not pin vllm: this package only patches in-memory and uses the
# stable connector hooks. The compat matrix in README.md lists the vLLM
# versions we test against.
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=7",
]

[project.urls]
Homepage = "https://github.com/your-org/vllm-marconi-offload"
Issues = "https://github.com/your-org/vllm-marconi-offload/issues"

[tool.setuptools.packages.find]
include = ["vllm_marconi_offload*"]
exclude = ["tests*"]
